<resources>
    <string name="app_name">MySize</string>
    <string name="neckHint">首回り</string>
    <string name="sleeveHint">裄丈</string>
    <string name="waistHint">胴回り</string>
    <string name="inseamHint">股下</string>
    <string name="saveButtonText">保存</string>
    <string name="heightText">身長</string>
    <string name="heightDeafultValue">170</string>
    <string name="height1_value">140</string>
    <string name="height2_value">150</string>
    <string name="height3_value">160</string>
    <string name="height4_Value">170</string>
</resources>
