<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeightActivity">

    <TextView
        android:id="@+id/heightTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/heightText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/heightDeafultValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="@dimen/heightFontSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/spnner_width"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:entries="@array/txt_height_arr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/seekbar_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:max="@integer/seekBar_MaxValue"
        android:progress="@integer/seekBar_DefaultValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:splitMotionEvents="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/height1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height1_value" />

        <RadioButton
            android:id="@+id/height2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height2_value" />

        <RadioButton
            android:id="@+id/height3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height3_value"
            tools:visibility="visible" />

        <RadioButton
            android:id="@+id/height4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height4_Value" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>